--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,10 @@ ADD_FLEX_BISON_DEPENDENCY(MyScanner MyGrammar)
 include_directories(${LLVM_INCLUDE_DIRS} include)
 add_definitions(${LLVM_DEFINITIONS})
 
+add_custom_target(copy-test-cases ALL 
+		COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/Tests ${PROJECT_BINARY_DIR}/Tests
+		DEPENDS c--)
+
 llvm_map_components_to_libnames(llvm_libs support core irreader)
 
 add_executable(c-- main.cpp src/Driver.cpp src/Scoping.cpp src/Type.cpp src/scanner.cpp src/grammar.cpp src/grammar.h)
